--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,13 +12,13 @@
 name: "CodeQL"
 
 on:
-  push:
-    branches: [ "main" ]
+  # push:
+  #   branches: [ "main" ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
-  schedule:
-    - cron: '15 23 * * 2'
+  # schedule:
+  #   - cron: '15 23 * * 2'
 
 jobs:
   analyze:
