Update separate shared code.

--- a/src/Examples.Cryptography.Tests/Examples.Cryptography.Tests.csproj
+++ b/src/Examples.Cryptography.Tests/Examples.Cryptography.Tests.csproj
@@ -26,4 +26,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Examples.Cryptography\Examples.Cryptography.csproj" />
+  </ItemGroup>
+
 </Project>
