Move to shared code to examples-dotnet.

--- a/src/Examples.Cryptography/Examples.Cryptography.csproj
+++ b/src/Examples.Cryptography/Examples.Cryptography.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Examples</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SWX.Examples.Shared" Version="1.0.0-alpha.1" />
+  </ItemGroup>
+
 </Project>
