--- a/.github/workflows/dotnet-package.yml
+++ b/.github/workflows/dotnet-package.yml
@@ -5,6 +5,7 @@ on:
   #  branches: [ "main" ]
   # pull_request:
   #   branches: [ "main" ]
+  #   types: [closed]
   workflow_dispatch:
 
 env:
@@ -22,6 +23,9 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
+      - name: Auth Github
+        run: dotnet nuget update source github --username suzu-devworks --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
+
       - name: Restore dependencies
         run: dotnet restore
 
@@ -35,6 +39,4 @@ jobs:
         run: dotnet pack --configuration Release --no-build -o artifacts/
 
       - name: Push
-        run: |
-          dotnet nuget update source github --username suzu-devworks --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
-          dotnet nuget push artifacts/*.nupkg --source "github" --skip-duplicate
+        run: dotnet nuget push artifacts/*.nupkg --source "github" --skip-duplicate
