Add BC X.509 TimeStampToken test.

--- a/src/Examples.Cryptography.BC.Tests/Examples.Cryptography.BC.Tests.csproj
+++ b/src/Examples.Cryptography.BC.Tests/Examples.Cryptography.BC.Tests.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>$(MyTestingFrameworks)</TargetFrameworks>
+    <TargetFramework>net7.0</TargetFramework>
+
+    <!-- <TargetFrameworks>$(MyTestingFrameworks)</TargetFrameworks> -->
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>Examples</RootNamespace>
