--- a/src/Examples.Cryptography.BC.Tests/Examples.Cryptography.BC.Tests.csproj
+++ b/src/Examples.Cryptography.BC.Tests/Examples.Cryptography.BC.Tests.csproj
@@ -1,9 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-
-    <!-- <TargetFrameworks>$(MyTestingFrameworks)</TargetFrameworks> -->
+    <TargetFrameworks>$(MyTestingFrameworks)</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>Examples</RootNamespace>
