--- a/src/Examples.Cryptography.BC.Tests/Examples.Cryptography.BC.Tests.csproj
+++ b/src/Examples.Cryptography.BC.Tests/Examples.Cryptography.BC.Tests.csproj
@@ -10,9 +10,15 @@
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591;xUnit1004</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="BouncyCastle.Cryptography" Version="2.2.1" />
     <PackageReference Include="ChainingAssertion.Core.Xunit" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
     <PackageReference Include="Moq" Version="4.20.69" />
     <PackageReference Include="xunit" Version="2.5.1" />
