Add XAdES creation example.

--- a/src/Examples.Cryptography.Tests/Examples.Cryptography.Tests.csproj
+++ b/src/Examples.Cryptography.Tests/Examples.Cryptography.Tests.csproj
@@ -30,4 +30,5 @@
     <ProjectReference Include="..\Examples.Cryptography\Examples.Cryptography.csproj" />
   </ItemGroup>
 
+  <Import Project="XmlSampleGenerator.Build.targets" />
 </Project>
