--- a/src/Examples.Cryptography.Tests/XmlSampleGenerator.Build.targets
+++ b/src/Examples.Cryptography.Tests/XmlSampleGenerator.Build.targets
@@ -10,7 +10,7 @@
     <Exec
       Condition="'@(XmlSchemaClassGeneratorFiles)' != ''"
       WorkingDirectory="$(ProjectDir)"
-      Command="xscgen -o generated --netCore --nullable --verbose -p Examples.Cryptography.Xml -n http://www.w3.org/2000/09/xmldsig#=XAdES.XmlDsig -n http://uri.etsi.org/01903/v1.3.2#=XAdES.XAdES132 -n http://uri.etsi.org/01903/v1.4.1#=XAdES.XAdES141 %(XmlSchemaClassGeneratorFiles.Identity)"
+      Command="dotnet xscgen -o generated --netCore --nullable --verbose -p Examples.Cryptography.Xml -n http://www.w3.org/2000/09/xmldsig#=XAdES.XmlDsig -n http://uri.etsi.org/01903/v1.3.2#=XAdES.XAdES132 -n http://uri.etsi.org/01903/v1.4.1#=XAdES.XAdES141 %(XmlSchemaClassGeneratorFiles.Identity)"
       />
     <ItemGroup>
       <Compile
