Update DevContainer to .NET 8.0.

--- a/src/Examples.Cryptography.BC.Tests/Examples.Cryptography.BC.Tests.csproj
+++ b/src/Examples.Cryptography.BC.Tests/Examples.Cryptography.BC.Tests.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>$(MyTestingFrameworks)</TargetFrameworks>
+    <TargetFramework>$(OwnTargetFramework)</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>Examples</RootNamespace>
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
