--- a/src/Examples.Cryptography/Examples.Cryptography.csproj
+++ b/src/Examples.Cryptography/Examples.Cryptography.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>$(MyTargetFrameworks)</TargetFrameworks>
+    <TargetFrameworks>$(OwnTargetFramework)</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>Examples</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SWX.Examples.Shared" Version="1.0.0-alpha.1" />
+    <PackageReference Include="Suzu.Examples.Shared" Version="1.0.0-alpha.1" />
   </ItemGroup>
 
 </Project>
