--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,27 +2,10 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/dotnet
 {
   "name": "C# (.NET)",
-  "dockerComposeFile": "docker-compose.yml",
+  "dockerComposeFile": [
+    "compose.develop.yaml"
+  ],
   "service": "dev",
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-  "containerEnv": {
-    "CONTAINER_WORKSPACE_FOLDER": "/workspaces/${localWorkspaceFolderBasename}"
-  },
-  "remoteEnv": {
-    "LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}",
-    "DOTNET_ENVIRONMENT": "Development"
-  },
-  "customizations": {
-    "vscode": {
-      "settings": {},
-      "extensions": [
-        "ms-ceintl.vscode-language-pack-ja",
-        "ms-dotnettools.csdevkit",
-        "editorconfig.editorconfig",
-        "gaoshan0621.csharp-format-usings",
-        "k--kato.docomment"
-      ]
-    }
-  },
   "remoteUser": "vscode"
 }
