--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -4,7 +4,7 @@
     <BinDirectory>bin/</BinDirectory>
   </PropertyGroup>
 
-  <Target Name="RemoveDirectories">
+  <Target Name="rmdir">
     <RemoveDir Directories="$(ObjectDirectory);$(BinDirectory);" />
   </Target>
 </Project>
