--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -23,6 +23,8 @@ jobs:
     timeout-minutes: 5
     permissions:
       contents: read
+    env:
+      TEST_ASSETS_PATH: ${{ github.workspace }}/assets
 
     steps:
       - uses: actions/checkout@v6
@@ -42,7 +44,12 @@ jobs:
         run: dotnet restore --locked-mode
       - name: Build
         run: dotnet build --configuration Release --no-restore
-      - name: Test
+      - name: Test assets scripts
         run: |
-          ./scripts/openssl-generate.sh ./assets
-          dotnet test --configuration Release --no-build --verbosity normal
+          set -e
+          ./scripts/openssl-generate.sh ${{ env.TEST_ASSETS_PATH }}
+        timeout-minutes: 1
+      - name: Test
+        run: dotnet test --configuration Release --no-build --verbosity normal
+        env:
+          TEST_ASSETS_PATH: ${{ env.TEST_ASSETS_PATH }}
