--- a/src/Examples.Cryptography.Tests/Examples.Cryptography.Tests.csproj
+++ b/src/Examples.Cryptography.Tests/Examples.Cryptography.Tests.csproj
@@ -8,6 +8,10 @@
     <RootNamespace>Examples</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup>
+     <NoWarn>$(NoWarn);CA1822;</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
