--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,6 +2,10 @@
   <PropertyGroup>
     <LatestFramework>net10.0</LatestFramework>
     <LTSFrameworks>net8.0;net10.0</LTSFrameworks>
+
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <RestorePackagesWithLockFile>false</RestorePackagesWithLockFile>
   </PropertyGroup>
