--- a/scripts/openssl-test.cnf
+++ b/scripts/openssl-test.cnf
@@ -19,6 +19,13 @@ subjectKeyIdentifier    = hash
 authorityKeyIdentifier  = keyid:always,issuer
 basicConstraints        = critical,CA:true
 
+[ v3_intermediate_ca ]
+# 標準的な拡張
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid:always,issuer
+basicConstraints = critical, CA:TRUE, pathlen:0
+keyUsage = critical, digitalSignature, cRLSign, keyCertSign
+
 [ v3_cert ]
 basicConstraints        = CA:FALSE
 subjectKeyIdentifier    = hash
